# kirgu_employee_api

./: .gitignore  alembic.ini  kirgu_employee.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023-10-15_initial_migration.py
src/: app.py  dependencies.py  schemas.py  test_app.py
src/database/: models.py
src/kirgu_employee/: dependencies.py  main.py  schemas.py  settings.py  test_main.py
src/kirgu_employee/database/: databese.py  models.py
src/kirgu_employee/repositories/: main_repository.py
src/repositories/: main_repository.py
