[tool.poetry]
name = "kirgu-employee"
version = "0.1.0"
description = ""
authors = ["Garius6 <gaidarforprivateusage@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.103.1"}
uvicorn = "^0.23.2"
pydantic = {extras = ["dotenv"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
black = "^23.9.1"
pytest = "^7.4.2"
httpx = "^0.25.0"

[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
